--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 /* Base Styles */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
     margin: 0;
     padding: 0%;
@@ -12,8 +17,11 @@ body {
     width: 100%;
     background-color: #283c86;
     color: white;
-    padding: 1rem 2rem;
+    padding: 15px 20px;
     z-index: 1000;
+    justify-content: space-between;
+    align-items: center;
+    top: 0;
   }
   
   nav {
@@ -26,27 +34,25 @@ body {
   .nav-links {
     list-style: none;
     display: flex;
-    gap: 1rem;
+    gap: 20px;
     padding-right: 5%;
+    z-index: 999;
   }
   
   .nav-links li a {
     color: white;
     text-decoration: none;
+    transition: color 0.3s;
   }
   .nav-links a:hover {
     color: #8ecfcf;
   }
   .menu-toggle {
     display: none;
-    font-size: 24px;
+    font-size: 28px;
     cursor: pointer;
-  }
-  
-  .hamburger {
-    display: none;
-    font-size: 2rem;
-    cursor: pointer;
+    z-index: 1002;
+    position: relative;
   }
   
   /* Sections */
@@ -71,7 +77,7 @@ body {
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
-    display: flex;
+    display:flex;
     align-items: center;
     justify-content: space-evenly;
     color: white;
@@ -85,11 +91,11 @@ body {
     top: 0; left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.3);
     z-index: 0;
   }
   
-  .content {
+  .home-content {
     position: relative;
     z-index: 1;
     animation: fadeInUp 2s ease-out forwards;
@@ -104,29 +110,32 @@ body {
     }
   }
   
-  .home-content .text h2 {
+  .text h2 {
     font-size: 50px;
-    
+    color: #f0f0f0;
+text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
   }
   .home-content .text p{
     font-size: 25px;
     font-style: italic;
     font-weight: bold;
+    color: #f0f0f0;
+text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
   }
 
   .typing {
     font-size: 25px;
     font-weight: 500;
     color: #ffffff;
-    border-right: 2px solid #ffffff;
+    border-right: 1px solid #f0f0f0;
     white-space: nowrap;
     overflow: hidden;
   }
   
   
   .profile-img {
-    max-width: 250px;
-    max-height: 250px;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
     margin-top: 1rem;
     object-fit: cover;
